# Instructor-Performance-Analytics

./: README.md  pyproject.toml  requirements.txt  setup.py  template.py
notebook/: mongoDB_demo.ipynb
src/exceptions/: __init__.py
src/logger/: __init__.py
